--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
 </head>
   <body class="font-display bg-background-light dark:bg-background-dark text-text-light-primary dark:text-dark-primary overflow-hidden">
     <div id="root" class="h-full w-full"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
